--- a/index.html
+++ b/index.html
@@ -488,6 +488,215 @@
                             </div>
                         </div>
                     </div>
+                    <div class="product--item mb-6">
+                        <div class="product--item-children">
+                            <div class="thumbnail-product">
+                                <img
+                                    class="anh-san-pham"
+                                    src="https://bizweb.dktcdn.net/thumb/large/100/438/408/products/ao-polo-nu-coolmax-lacoste-apn3516-vag-yodyvn-7.jpg?v=1688723494000"
+                                    alt="Ảnh sản phẩm"
+                                />
+                                <span class="hot">
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/hotico.svg?1688526181467"
+                                        alt="hot"
+                                    />
+                                </span>
+                            </div>
+                            <div class="product--item-children--intro">
+                                <h3>Áo Polo Nữ Coolmax</h3>
+                                <p>
+                                    <span>299.000đ</span>
+                                </p>
+                                <div>
+                                    <img
+                                        class="active"
+                                        src="./assets/img/akn5040-cam-4-1c797839-d544-45ec-9c47-d5bcfd0bfa70.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-nav-2.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-vag-1.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/ic_arrow_circle_right.svg?1688526181467"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product--item mb-6">
+                        <div class="product--item-children">
+                            <div class="thumbnail-product">
+                                <img
+                                    class="anh-san-pham"
+                                    src="https://bizweb.dktcdn.net/thumb/large/100/438/408/products/qjn3076-dni-1.jpg?v=1688723484000"
+                                    alt="Ảnh sản phẩm"
+                                />
+                                <span class="sold">
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/icon_start.svg?1688528044762"
+                                        alt="sold"
+                                    />
+                                    4.7 | Đã bán 10.7K
+                                </span>
+                                <span class="discount"> -30% </span>
+                            </div>
+                            <div class="product--item-children--intro">
+                                <h3>Quần Jeans Nữ Baggy Co Giãn Cạp Liền</h3>
+                                <p>
+                                    <span>399.000đ</span>
+                                </p>
+                                <div>
+                                    <img
+                                        class="active"
+                                        src="./assets/img/akn5040-cam-4-1c797839-d544-45ec-9c47-d5bcfd0bfa70.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-nav-2.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-vag-1.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/ic_arrow_circle_right.svg?1688526181467"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product--item mb-6">
+                        <div class="product--item-children">
+                            <div class="thumbnail-product">
+                                <img
+                                    class="anh-san-pham"
+                                    src="https://bizweb.dktcdn.net/thumb/large/100/438/408/products/quan-jeans-nu-qjn4014-dam-5-yodyvn.jpg?v=1688723483000"
+                                    alt="Ảnh sản phẩm"
+                                />
+                                <span class="hot">
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/hotico.svg?1688526181467"
+                                        alt="hot"
+                                    />
+                                </span>
+                            </div>
+                            <div class="product--item-children--intro">
+                                <h3>
+                                    Quần Jeans Nữ Dáng Boy Lưng Thấp Vải Mềm
+                                    Thoáng Khí
+                                </h3>
+                                <p>
+                                    <span>229.500đ</span>
+                                </p>
+                                <div>
+                                    <img
+                                        class="active"
+                                        src="./assets/img/akn5040-cam-4-1c797839-d544-45ec-9c47-d5bcfd0bfa70.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-nav-2.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-vag-1.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/ic_arrow_circle_right.svg?1688526181467"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product--item mb-6">
+                        <div class="product--item-children">
+                            <div class="thumbnail-product">
+                                <img
+                                    class="anh-san-pham"
+                                    src="https://bizweb.dktcdn.net/thumb/large/100/438/408/products/acn5010-xat-3.jpg?v=1653096236000"
+                                    alt="Ảnh sản phẩm"
+                                />
+                                <span class="hot">
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/hotico.svg?1688526181467"
+                                        alt="hot"
+                                    />
+                                </span>
+                            </div>
+                            <div class="product--item-children--intro">
+                                <h3>
+                                    Áo Chống Nắng Nữ Airy UV Thoáng Mát Chống
+                                    Tia UV
+                                </h3>
+                                <p>
+                                    <span>244.300đ</span>
+                                    <span>349.000đ</span>
+                                </p>
+                                <div>
+                                    <img
+                                        class="active"
+                                        src="./assets/img/akn5040-cam-4-1c797839-d544-45ec-9c47-d5bcfd0bfa70.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-nav-2.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/apn4396-vag-1.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="./assets/img/akn5040-vag-5.webp"
+                                        alt="Ảnh chọn màu"
+                                    />
+                                    <img
+                                        src="https://bizweb.dktcdn.net/100/438/408/themes/913235/assets/ic_arrow_circle_right.svg?1688526181467"
+                                        alt=""
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="flex-center button-load-more">
                     <button class="btn btn-load-more">Xem Thêm</button>
